--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <ul>
         <h2><li>Wedding</li></h2>
         </ul>
-        <img src="download(1).png">
+        <a href="https://www.toastweddingfilms.com/ellie-connor"><img src="download(1).png"></a>
     <hr>
         <ul>
         <h2><li>Honeymoon</h2><em>click picture to view honeymoon registry</em></li>
@@ -39,7 +39,7 @@
         <ul>
         <h2><li>Ski Trip</li></h2>
         </ul>
-        <img src="download(4).png">
+        <a href="https://www.dropbox.com/sh/4gqm9pei8g5jd5a/AACU2ZBxb2NsfT85GUxD-78Ya?dl=0"><img src="download(4).png">
     <hr>
 </body>
 </html>
