--- a/index.html
+++ b/index.html
@@ -1,48 +1,68 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Connor's 2018 Photos</title>
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+
+    <!-- Font Awesome Link -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+
+    <!-- Google Fonts Link -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+
+    <!-- My own styles -->
     <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <h1>Photos: 2018</h1>
-    <!-- Note the "first below uniquely identifies one element vs. another. Use one word no spaces" -->
-    <!-- Really no reason to use "ID" instead of "class" -->
-    <p id="first"><a href="about.html">About Me</a></p>
-    <hr>
-    <table class="date_table">
-            <tr>
-            <th>Activity</th>
-            <th>Date</th>
-            </tr>
-            <tr>
-            <td>Wedding</td>
-            <td>6/9/2018</td>
-            </tr>
-            <tr>
-            <td>Honeymoon</td>
-            <td>6/14/2018</td>
-            </tr>
-            <tr>
-            <td>Ski Trip</td>
-            <td>12/12/2018</td>
-            </tr>
-        </table>
-    <hr>
-    <ul class= "photo_titles">
-        <h2><li>Wedding</li><em class= "instructions">click picture to view wedding photos</em></h2>
-        </ul>
-        <a href="https://www.toastweddingfilms.com/ellie-connor"><img src="download(1).png"></a>
-    <hr>  
-    <ul class= "photo_titles">
-        <h2><li>Honeymoon</li><em class= "instructions">click picture to view honeymoon registry</em></h2>
-        </ul>
-        <a href="https://www.zola.com/registry/ellieandconnorryan/edit"><img src="download(5).png"></a>
-    <hr>
-    <ul class= "photo_titles">
-        <h2><li>Ski Trip</li><em class= "instructions">click picture to view ski trip photos</em></h2>
-        </ul>
-        <a href="https://www.dropbox.com/sh/4gqm9pei8g5jd5a/AACU2ZBxb2NsfT85GUxD-78Ya?dl=0"><img src="download(4).png">
-    <hr>
-</body>
+    
+  <!-- Insert Container -->
+  <div class="container-fluid">
+    <!-- Insert Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href="http://www.cryan15.github.io"><img src="inFlex (Teal).png"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Find Trainers</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
+            </li>           
+          </ul>
+        </div>
+      </nav>
+
+    <!-- Insert Jumbotron -->
+    <div class="container-fluid">
+      <div class="jumbotron jumbotron-fluid">
+        <div class="container-fluid">
+              <div class="row">
+                <div class="col-sm-3">
+                <h1 class="display-4">inFlex</h1>
+                  <p class="lead">inFlex helps independent personal trainers manage every aspect of their business so they can focus on what they do best, training.</p>
+                </div>  
+                <div class="col-sm-3"></div>
+                <div class="col-sm-3"></div>
+                <div class="col-sm-3"></div>
+              </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+    <title>Hello, world!</title>
+  </head>
+  <body>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+  </body>
 </html>
