Chaged Home reference

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="container-fluid">
     <!-- Insert Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="http://www.cryan15.github.io"><img src="inFlex (Teal).png"></a>
+        <a class="navbar-brand" href="#"><img src="inFlex (Teal).png"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -55,7 +55,7 @@
     </div>
 
   </div>
-    <title>Hello, world!</title>
+    <title>inFlex</title>
   </head>
   <body>
 
