--- a/about.html
+++ b/about.html
@@ -17,44 +17,25 @@
     <!-- My own styles -->
     <link rel="stylesheet" href="styles.css">
     
-  <!-- Insert Container for Navbar-->
+  <!-- Insert Container -->
   <div class="container-fluid">
     <!-- Insert Navbar -->
     <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand" href="index.html"><img src="inFlex (Teal).png"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="find_trainers.html">Find Trainers <i class="fas fa-running"></i></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="about.html">About <i class="fas fa-info-circle"></i></a>
-            </li>           
-          </ul>
+            <a class="navbar-brand" href="index.html"><img src="inFlex (Teal).png"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                  <a class="nav-link" href="find_trainers.html">Find Trainers <i class="fas fa-running"></i></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="about.html">About <i class="fas fa-info-circle"></i></a>
+                </li>           
+              </ul>
         </div>
     </nav>
-  </div>
-
-    <!-- Insert Jumbotron -->
-    <div class="container-fluid">
-      <div class="jumbotron jumbotron-fluid jumbotron1">
-        <div class="container-fluid">
-              <div class="row">
-                <div class="col-md-3">
-                <h1 class="display-4">inFlex</h1>
-                  <p class="lead">inFlex helps independent personal trainers manage every aspect of their business so they can focus on what they do best, training.</p>
-                </div>  
-                <div class="col-sm-3"></div>
-                <div class="col-sm-3"></div>
-                <div class="col-sm-3"></div>
-              </div>
-        </div>
-      </div>
-    </div>
-
   </div>
     <title>inFlex</title>
   </head>
