--- a/about.html
+++ b/about.html
@@ -20,37 +20,38 @@
   <!-- Insert Container -->
   <div class="container-fluid">
     <!-- Insert Navbar -->
-    <nav class="navbar navbar-expand">
-            <a class="navbar-brand" href="index.html"><img src="inFlex (Teal).png"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                  <a class="nav-link" href="find_trainers.html">Find Trainers <i class="fas fa-running"></i></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="about.html">About <i class="fas fa-info-circle"></i></a>
-                </li>           
-              </ul>
+
+  <nav class="navbar navbar-expand-sm navbar-light">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="navbar-brand" href="index.html"><img src="inFlex (Teal).png"></a>
+      
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+          <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+            <li class="nav-item active">
+              <a class="nav-link" href="find_trainers.html">Find Trainers <i class="fas fa-running"></i> <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="about.html">About <i class="fas fa-info-circle"></i> <span class="sr-only">(current)</span></a>
+            </li>
+          </ul>
         </div>
-    </nav>
-  </div>
+      </nav>
 
   <!-- Insert Container for About Me -->
   <div class="container-fluid">
         <div class="row">
-          <div class="col-md-2"></div>
-          <div class="col-md-3">
+          <div class="col-lg-0"></div>
+          <div class="col-lg-2">
             <a class="connorphoto" href="#"><img src="Kellogg_Photo.JPG" alt="Connor_Picture"></a>
           </div>
-          <div class="col-md-6">
+          <div class="col-lg-6">
             <h1 class="lefttext">About inFlex</h1>
             <p>In 2017, Connor Ryan witnessed firsthand how frusturating being an independent personal trainer could be.  His trainer at the time was burdened with new client development, existing client scheduling, payment processing, and training and nutritional planning. It was a wonder they had any time to actually work with clients!</p>
             <p>Connor started inFlex so personal trainers could spend less time on the behind a computer screen, and more time helping their clients reach their goals.</p>
           </div>
-          <div class="col-md-2"></div>
+          <div class="col-lg-4"></div>
         </div>
   </div>
 
