--- a/find_trainers.html
+++ b/find_trainers.html
@@ -20,21 +20,21 @@
   <!-- Insert Container for Navbar -->
   <div class="container-fluid">
     <!-- Insert Navbar -->
-    <nav class="navbar navbar-expand">
-            <a class="navbar-brand" href="index.html"><img src="inFlex (Teal).png"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <nav class="navbar navbar-expand-sm navbar-light">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                  <a class="nav-link" href="find_trainers.html">Find Trainers <i class="fas fa-running"></i></a>
+            <a class="navbar-brand" href="index.html"><img src="inFlex (Teal).png"></a>
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+              <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                <li class="nav-item active">
+                  <a class="nav-link" href="find_trainers.html">Find Trainers <i class="fas fa-running"></i> <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="about.html">About <i class="fas fa-info-circle"></i></a>
-                </li>           
+                <li class="nav-item active">
+                  <a class="nav-link" href="about.html">About <i class="fas fa-info-circle"></i> <span class="sr-only">(current)</span></a>
+                </li>
               </ul>
-        </div>
+            </div>
     </nav>
   </div>
 
