--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
           <div class="col-lg-6">
             <h1 class="lefttext">About inFlex</h1>
             <p>In 2017, Connor Ryan witnessed firsthand how frusturating being an independent personal trainer could be.  His trainer at the time was burdened with new client development, existing client scheduling, payment processing, and training and nutritional planning. It was a wonder they had any time to actually work with clients!</p>
-            <p>Connor started inFlex so personal trainers could spend less time on the behind a computer screen, and more time helping their clients reach their goals.</p>
+            <p>Connor started inFlex so personal trainers could spend less time behind a computer screen, and more time helping their clients reach their goals.</p>
           </div>
           <div class="col-lg-4"></div>
         </div>
